# ignition_to_pokerstars_hand_convert

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
example_converted_hands/: BovadaHandHistory_Holdem_NL_202507151813478324303.txt  BovadaHandHistory_Holdem_NL_202507151813481491654.txt  BovadaHandHistory_Holdem_NL_202507151813486581547.txt  BovadaHandHistory_Holdem_NL_20250715830468983531.txt  BovadaHandHistory_Holdem_NL_20250715830470863525.txt  BovadaHandHistory_Holdem_NL_20250715830471627226.txt  BovadaHandHistory_Holdem_NL_20250715830472592018.txt  BovadaHandHistory_Holdem_NL_20250715830473522088.txt  BovadaHandHistory_Holdem_NL_20250715830476928188.txt  BovadaHandHistory_Holdem_NL_20250715830478255.txt  BovadaHandHistory_Holdem_NL_20250715830479477696.txt  BovadaHandHistory_Holdem_NL_2025071583048718619.txt  BovadaHandHistory_Holdem_NL_20250715830488951637.txt  BovadaHandHistory_Holdem_NL_20250715830491807862.txt  BovadaHandHistory_Holdem_NL_20250715830494186737.txt  BovadaHandHistory_Holdem_NL_20250715830495293122.txt  BovadaHandHistory_Holdem_NL_2025071583050586285.txt  BovadaHandHistory_Holdem_NL_20250715830507447181.txt  BovadaHandHistory_Holdem_NL_20250715830512381977.txt  BovadaHandHistory_Holdem_NL_20250715830512963804.txt  BovadaHandHistory_Holdem_NL_20250715830515000178.txt  BovadaHandHistory_Holdem_NL_20250715830515997996.txt  BovadaHandHistory_Holdem_NL_20250715830518302537.txt  BovadaHandHistory_Holdem_NL_20250715830519198234.txt  BovadaHandHistory_Holdem_NL_20250715830520540524.txt  (+4 more)
src/: convert.py  models.py
tests/: test.py  (+2 more)
(+57 files in other folders)
