[project]
name = "ignition-to-pokerstars-hand-convert"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ohh-pydantic>=0.1.0",
    "pydantic>=2.11.7",
    "typing>=3.10.0.0",
]

[dependency-groups]
dev = [
    "deepdiff>=8.6.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
]
